openshift/DEV1/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: abacas-transaction-service
  labels:
    app: abacas-transaction-service
    app.kubernetes.io/component: abacas-transaction-service
    app.kubernetes.io/instance: abacas-transaction-service
    app.kubernetes.io/name: abacas-transaction-service
    app.kubernetes.io/part-of: ABACAS
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  host: abacas.apps.ocpdev.dti.co.id
  path: /transaction
  to:
    kind: Service
    name: abacas-transaction-service
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIHVjCCBj6gAwIBAgITJQAABN3FNxRdPfsUUgACAAAE3TANBgkqhkiG9w0BAQsF
[...]
      EThfWwBAyrxoMQ==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIJKgIBAAKCAgEA68VLRY2bHAUvLv2/PeQdDSchpvQU6dIGN/JIj28F19p6eJ6t
[...]
      -----END RSA PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEBDCCAuygAwIBAgIQWRrc69n8yZJJJ9J7HwCfqDANBgkqhkiG9w0BAQsFADB0
[...]
      WGx+/rblnXfETbt80r1VZCvg4JKeHstY
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
